# proxmox-k8s-cicd

./: .gitignore  AGENTS.md  Makefile  README.md  mypy.ini  pyproject.toml  spec-bridge.conf  versions.yaml
clusters/apps/: .gitignore  main.tf  versions.lock.yaml
clusters/cicd/: .gitignore  main.tf  terraform.tfvars.example
docs/: architecture.md  cilium-installation.md  cluster-instances.md  cluster-state.md  install-k3s-plan.md  install-k3s-vip-followup.md  install-k3s-vip-verification.md  plan-envoy-gateway-and-smoke-tests.md  proxmox-serial-capture.md  requirements.md  verification.md
docs/runbooks/: cloudflare-fallback.md  decommission-cluster.md  gitlab-state-backend.md  rotate-tokens.md  scale-workers.md
infra/tokens/: .gitignore  CONTEXT.md  cloudflare.tf  output_json.tf  outputs.tf  providers.tf  proxmox.tf  terraform.tfvars.example  variables.tf  versions.lock.yaml  versions.tf
modules/proxmox-k3s-cluster/: dnsmasq.tf  main.tf  outputs.tf  talos.tf  traefik.tf  variables.tf  versions.lock.yaml
scripts/: apply.sh  apply_tofu.py  capture_host_ports_baseline.sh  capture_serial.py  gitlab_backend.sh  pyproject.toml  sync_dns_to_sdn.py  wp07_live_apply.py
specs/001-build-a-kubernetes-k3s-cluster-on-proxmo/: decomposition.md  execution-schedule.json  meta.json  plan.md  research-log-v1.json  research-log-v2.json  research-log-v3.json  research-log-v4.json  research-log-v5.json  research-log-v6.json  research-log-v7.json  research-log-v8.json  research.md  spec.md  tasks.md
tools/: CONTEXT.md  __init__.py  bootstrap_cluster.py  build_image.py  kubeconfig_puller.py  ssh_proxy.py  versions.lock.yaml
tools/build_image/: __init__.py  __main__.py
tools/lib/: __init__.py  cluster_topology.py  cluster_topology_writer.py  helm_client.py  host_ports.py  k3s_installer.py  kubeconfig_merger.py  log.py  pve_client.py  pve_ssh.py  repo_locator.py  secret_loader.py  talos_client.py  versions.py
tools/packer/: talos.pkr.hcl
tools/tests/: conftest.py  test_agent_skill.py  test_bootstrap_cluster.py  test_build_image.py  test_cluster_topology_writer.py  test_cross_cluster.py  test_k3s_installer.py  test_kubeconfig_puller.py  test_log.py  test_pve_client.py  test_pve_ssh.py  test_remaining_releases.py  test_repo_locator.py  (+2 more)
(+72 files in other folders)
