[project]
name = "proxmox-k8s-cicd-tools"
version = "0.1.0"
description = "Operator tooling for the proxmox-k8s-cicd repo (SSH proxy + kubeconfig puller)."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "proxmox-k8s-cicd" }]

# No third-party dependencies. The two CLIs use only the Python stdlib
# plus the in-tree `tools.lib.*` modules.

[project.scripts]
# `uv tool install .` registers these as `ssh-proxy` and `kubeconfig-puller`
# on the operator's PATH. The console_scripts entry point invokes
# `python -c "from tools.ssh_proxy import main; sys.exit(main())"`, so
# the installed `tools` package must be importable -- which uv's wheel
# build guarantees by installing the `tools` package into the venv
# site-packages.
ssh-proxy = "tools.ssh_proxy:main"
kubeconfig-puller = "tools.kubeconfig_puller:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Ship the entire `tools/` tree (the package), but exclude the test
# tree so `uv tool install` doesn't drag pytest fixtures into the
# operator's venv.
packages = ["tools"]
exclude = [
    "tools/tests",
    "tools/packer",
    "tools/build_image",
    "tools/bootstrap_cluster.py",
    "tools/versions.lock.yaml",
    "tools/CONTEXT.md",
    "tools/__pycache__",
]

[tool.hatch.build.targets.wheel.shared-data]
# The lockfile documents compatibility constraints for the CLIs
# (the PveSshProxy default jump host) so we ship it read-only.
"tools/versions.lock.yaml" = "share/proxmox-k8s-cicd-tools/versions.lock.yaml"
